WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208517
Regression (CookieCache) Unable to log into Hulu.com
https://bugs.webkit.org/show_bug.cgi?id=208517
Summary
Regression (CookieCache) Unable to log into Hulu.com
Chris Dumez
Reported
2020-03-03 09:05:50 PST
Unable to log into Hulu.com when the in-process cookie cache is enabled.
Attachments
Patch
(2.99 KB, patch)
2020-03-03 09:09 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-03 09:06:37 PST
<
rdar://problem/59973630
>
Chris Dumez
Comment 2
2020-03-03 09:09:18 PST
Created
attachment 392282
[details]
Patch
Geoffrey Garen
Comment 3
2020-03-03 09:46:24 PST
Comment on
attachment 392282
[details]
Patch r=me
Chris Dumez
Comment 4
2020-03-03 10:11:47 PST
Comment on
attachment 392282
[details]
Patch Clearing flags on attachment: 392282 Committed
r257783
: <
https://trac.webkit.org/changeset/257783
>
Chris Dumez
Comment 5
2020-03-03 10:11:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug