Regression (CookieCache) Unable to log into Hulu.com https://bugs.webkit.org/show_bug.cgi?id=208517 <rdar://problem/59973630>

Reviewed by Geoffrey Garen.

Even though we are listening for notifications for 'www.hulu.com', CFNetwork sends us a notification for host
'secure.hulu.com' when a load to secure.hulu.com sets a cookie for domain '.hulu.com'. Because the host did
not match one if our map of observers, we would ignore the cookie notification and our cookie cache would get
out of sync. To temporarily address the issue (until a better fix is made, likely on CFNetwork side), WebKit
now matches registrable domains instead of hosts.

* platform/network/cocoa/NetworkStorageSessionCocoa.mm:
(WebCore::NetworkStorageSession::registerCookieChangeListenersIfNecessary):

Canonical link: https://commits.webkit.org/221435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257783 268f45cc-cd09-0410-ab3c-d52691b4dbfc